<resources>
    <string name="app_name">PeerSplit</string>

    <!-- Login Page -->
    <string name="button_needAnAccount">Need An Account?</string>

    <!-- Register Page -->
    <string name="buttton_gotAnAccount">Got An Account?</string>
    <string name="signup">SIGN UP</string>

    <!-- Multi Use -->
    <string name="textField_username_hint">username</string>
    <string name="textField_password_hint">password</string>
    <string name="textField_passwordAgain_hint">password again</string>
    <string name="textField_email_hint">email</string>

    <!-- Home Activity -->

    <!-- Navigation Bar  -->
    <string name="nav_home"></string>
    <string name="nav_overview"></string>
    <string name="nav_upload"></string>
    <string name="nav_profile"></string>
    <string name="nav_settings"></string>

    <!-- Profile Page -->
    <string name="profile_page_title">Profile</string>

    <!-- Overview Page -->
    <string name="overview_page_title">Overview</string>

    <!-- Settings Page -->
    <string name="settings_page_title">Settings</string>

    <!-- Home Page -->
    <string name="home_page_title">Files In The Cloud</string>

    <!-- Welcome Page -->
    <string name="welcome_page_title">Welcome To Peer Split!</string>

    <!-- Upload Page -->
    <string name="upload_page_title">File Upload</string>

</resources>
