<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/feed"
        android:iconTint="@color/backgroundColour"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_overrview"
        android:icon="@drawable/alert"
        android:title="@string/nav_overview" />
    <item
        android:id="@+id/nav_upload"
        android:icon="@drawable/ic_file_upload_white_48px"
        android:title="@string/nav_upload" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/nav_settings" />
</menu>